assets/scss/custom.scss
// Nord colors
$colors: (
    #5e81ac,  /* Nord Frost 4 */
    #88c0d0,  /* Nord Frost 2 */
    #bf616a,  /* Nord Aurora red */
    #d08770,  /* Nord Aurora orange */
    #ebcb8b,  /* Nord Aurora yellow */
    #a3be8c,  /* Nord Aurora green */
    #b48ead   /* Nord Aurora purple */
);

body {
    font-size: 1.1rem;
}

h1,
h2 {
    font-weight: 700;
}

h1 {
    font-size: 2.5rem;
}

h2 {
    font-size: 1.8rem;
    margin-top: 2.75rem;
}

.article-style h2:first-child {
    margin-top: 0.75rem;
}

h3 {
    font-size: 1.4rem;
}

kbd {
    font-size: 75%;
}

.highlight pre, .highlight code {
    background-color: transparent;
}

.highlight>div,
.highlight>pre {
    margin: 0 0 2rem;
    padding: 1rem;
    border-radius: 1rem;
}

pre {
    font-size: 0.75em;
    line-height: 1.4;
    margin: 0;
}

code {
    font-size: 85%;
}

.article-container {
    max-width: 960px;
}

.docs-article-container {
    max-width: 960px;
}

.docs-sidebar .nav>li {
    line-height: 1.2;
}

#hero img {
    max-width: 60%;
}

.hero-title {
    line-height: 1.2;
    font-weight: 700;
}

.icon-list {
    list-style: none;
    text-indent: -0.7rem;
    padding-left: 1.4rem;
}

.contact-policy {
    font-size: 0.8rem;
    line-height: 1.5;
}

.due-date {
    margin-bottom: 2.5rem;
}

footer {
    margin-top: 2rem;
}

footer p {
    text-align: left;
    font-size: 100%;
}

.course-info {
    font-size: 0.9rem;
}

.credits {
    font-size: 0.7rem;
}

.course-info p,
.credits p {
    margin-bottom: 0.3rem;
}

.centered-table table {
    margin: 0 auto 1rem;
}

.docs-search {
    display: none !important;
}

.docs-links {
    padding-top: 2rem;
    max-height: calc(100vh - 4rem - 0px);

    .docs-toc-link {
        line-height: 1.2;
    }
}

.docs-toc-item {
    padding-top: 0.75rem;
}

.docs-links .docs-toc-item:first-child {
    padding-top: 0;
}

.docs-toc {
    padding-top: 2rem;
}

#TableOfContents {
    background-color: lighten(nth($colors, 7), 20%);
    line-height: 1.2;
    padding-bottom: 0.5em;

    ul {
        margin-bottom: 0;
    }

    li {
        margin: 0.3em 0;
    }

    li a {
        font-size: 0.85rem;
        color: darken(nth($colors, 7), 20%);
        padding: 0.125rem 0.5rem;

        &:focus,
        &:hover {
            color: $sta-link-hover;
        }

        &.active {
            color: $sta-link-hover !important;
        }
    }
}

.toc-top {
    background-color: nth($colors, 7);

    li a {
        font-size: 1.1rem;
        color: #FFFFFF;
        padding: 0.25rem 0.5rem;
        line-height: 1.5;

        &:focus,
        &:hover {
            color: #FFFFFF;
        }
    }
}

.article-style #TOC {
    font-family: "IBM Plex Sans Condensed",
    sans-serif;
    font-size: 0.8rem;
    text-align: left;
    background: lighten(nth($colors, 7), 20%);
    padding: 0;
    margin: 4px 0 2rem;
    padding-bottom: 0.5rem;

    ul {
        padding-left: 0em;
        list-style-type: none;
        margin-bottom: 0;
    }

    li {
        padding-left: 1.1em;
    }

    li li {
        padding-left: 2em;
    }

    a {
        color: darken(nth($colors, 7), 20%);

        &:focus,
        &:hover {
            color: $sta-link-hover;
        }
    }

    &:before {
        content: "Contents";
        font-size: 1.1rem;
        font-weight: 700;
        display: block;
        color: #ffffff;
        background-color: nth($colors, 7);
        padding: 0.1rem 0.8rem 0.1rem;
        margin-bottom: 0.2rem;
    }
}

.article-style li > p {
    margin-bottom: 1rem;
}

.footnotes {
    font-size: 0.8rem;
    line-height: 1.3;
}

// .fake-header {
//     font-family: "Oswald", sans-serif;
//     font-weight: 700;
//     text-transform: uppercase;
//     font-size: 1.2rem;
// }

.ical {
    font-size: 80%;
    text-align: center;
    background-color: lighten(nth($colors, 5), 20%);
    padding: 0.1rem 0;
    margin-bottom: 2rem;
}

.fake-header-table,
td.mid-table-header {
    font-family: "IBM Plex Sans Condensed", sans-serif;
    font-weight: 700;
}

.fake-header-table {
    font-size: 1.1rem;
}

.fake-header-table td {
    background-color: #FFFFFF !important;
}

.section-bottom td {
    border-bottom: 1px solid #4c566a;
}

// table.schedule > tbody > tr:nth-child(2n+1) > td {
//     background-color: #fff;
// }

table>tbody>tr:hover>td,
table>tbody>tr:hover>th {
    background-color: #e5e5e5 !important;
}

table.schedule tr.schedule-bg-1,
table.schedule>tbody>tr.schedule-bg-1:nth-child(2n+1)>td {
    background-color: lighten(nth($colors, 5), 25%);
}

table.schedule tr.schedule-bg-2,
table.schedule>tbody>tr.schedule-bg-2:nth-child(2n+1)>td {
    background-color: lighten(nth($colors, 1), 45%);
}

table.schedule tr.schedule-bg-3,
table.schedule>tbody>tr.schedule-bg-3:nth-child(2n+1)>td {
    background-color: lighten(nth($colors, 3), 40%);
}

table.schedule .content-title {
    font-weight: bold;
    color: nth($colors, 3);
}

.fake-header-table td {
    padding-top: 1.8rem;
    border-bottom: 2px solid #4c566a;
}

td.mid-table-header {
    text-align: center;
    vertical-align: middle !important;
    font-size: 0.8rem;
}

.article-style .slide-thumb {
    margin-top: 0;
}

.bg-class {
    background-color: nth($colors, 1);
}

.bg-content {
    background-color: nth($colors, 3);
}

.bg-assignment {
    background-color: nth($colors, 4);
}

.question form {
    width: 50%;
    margin: 0 auto;
    text-align: center;
}

.question p[id^="result_"] {
    color: nth($colors, 4);
    padding-top: 1em;
    width: 75%;
    margin: 0 auto;
    text-align: center;
}

.question label {
    padding-left: 0.4em;
    font-weight: bold;
}

div.note,
div.fyi,
div.puzzle,
div.warning {
    position: relative;
    padding: 1em 1em 1em 100px;
    margin: 1em 0;
    min-height: 120px;
}

div.note:before,
div.fyi:before,
div.puzzle:before,
div.warning:before {
    position: absolute;
    font-family: "FontAwesome";
    font-size: 70px;
    top: 0;
    opacity: 0.5;
}

div.note {
    color: nth($colors, 1);
    background-color: lighten(nth($colors, 1), 60%);
    border: dotted 4px nth($colors, 1);
}

div.note:before {
    content: "\f0eb";
    left: 30px;
}

div.fyi {
    color: nth($colors, 3);
    background-color: lighten(nth($colors, 3), 60%);
    border: dotted 4px nth($colors, 3);
}

div.fyi:before {
    content: "\f05a";
    left: 20px;
}

div.puzzle {
    color: nth($colors, 4);
    background-color: lighten(nth($colors, 4), 60%);
    border: dotted 4px nth($colors, 4);
}

div.puzzle:before {
    content: "\f12e";
    left: 20px;
}

div.warning {
    color: #FFFFFF;
    background-color: nth($colors, 6);
    border: dotted 4px #FFFFFF;
}

div.warning:before {
    content: "\f071";
    left: 14px;
}

.img-inline {
    display: inline-block;
    height: auto;
    max-width: 100%;
    margin: 0 !important;
}

/* Space after plotly widgets */
.widgetframe {
    margin-bottom: 2em;
}

